[package]
name = "ts-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ts-api-core = { path = "../ts-api-core" }
ts-api-macros = { path = "../ts-api-macros" }
poem = { workspace = true }

[dev-dependencies]
ts-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
